Kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finansist-gateway
---
apiVersion: apps/v1                       
kind: Deployment                          
metadata:                                 
  namespace: finansist                   
  name: finansist-gateway              
  labels:                                 
    app: finansist-gateway              
spec:                                     
  replicas: 3    
  revisionHistoryLimit: 1
  selector:                               
    matchLabels:                          
      app: finansist-gateway                   
  template:                               
    metadata:                 
      labels:                 
        app: finansist-gateway
    spec:                     
      containers:             
        - name: finansist-gateway      
          image: "gabrielrodriguesdev/finansist-backend-gateway:latest"
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 100Mi
              cpu: "1"
            requests:
              memory: 10Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  namespace: finansist
  name: finansist-service-gateway
spec:
  type: ClusterIP
  selector: 
    app: finansist-gateway
  ports:
    - name: finansist-service 
      port: 80
      targetPort: 80
      protocol: TCP 

---

# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   namespace: finansist
#   name: finansist-hpa-gateway
# spec:                                                     
#   scaleTargetRef:                                         
#     apiVersion: apps/v1                                   
#     kind: Deployment                                      
#     name: finansist-gateway                                        
#   minReplicas: 3                                          
#   maxReplicas: 9
#   targetCPUUtilizationPercentage: 90

---

apiVersion: networking.k8s.io/v1                                    
kind: Ingress                                                                 
metadata:                                                                     
  namespace: finansist                                                       
  name: ingress-finansist-gateway                                                       
  annotations:                                                               
    kubernetes.io/ingress.class: "nginx"                                                               
    nginx.ingress.kubernetes.io/affinity-mode: balanced                      
spec:                                                                        
  rules:                                                                     
  #- host: "api.finansist.com.br"                                        
    - http:                                                                    
        paths:                                                                 
        - path: /
          pathType: Prefix                                                     
          backend:                                                             
            service: 
              name: finansist-service-gateway
              port:
                number: 80
  # tls:
  # - hosts:
  #   - "finansist.com.br"
  #   - "*.finansist.com.br"
  #   secretName: letsencrypt-tls
